--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 body,
 html {
+    height: 100%;
     margin: 0;
     background: #7F7FD5;
     background: linear-gradient(to right, rgb(133, 245, 237), rgb(80, 135, 236), rgb(107, 107, 247));
@@ -12,7 +13,7 @@ html {
 
 .card {
     margin-top: 85px;
-    height: 800px;
+    height: 760px;
     border-radius: 15px !important;
     background-color: rgba(0, 0, 0, 0.4) !important;
 }
@@ -149,7 +150,7 @@ html {
 }
 
 .user_info span {
-    font-size: 20px;
+    font-size: 15px;
     color: white;
 }
 
@@ -199,8 +200,7 @@ html {
 }
 
 .msg_time_send {
-    position: absolute;
-    right: 0;
+    float: right;
     bottom: -15px;
     color: rgba(255, 255, 255, 0.5);
     font-size: 10px;
@@ -337,4 +337,133 @@ html {
 .messagepx {
     padding-left: 60px;
     padding-right: 60px;
+}
+
+.loader {
+    width: 150px;
+    height: 150px;
+    margin: 40px auto;
+    transform: rotate(-45deg);
+    font-size: 0;
+    line-height: 0;
+    animation: rotate-loader 5s infinite;
+    padding: 25px;
+    border: 1px solid #cf303d;
+}
+
+.loader .loader-inner {
+    position: relative;
+    display: inline-block;
+    width: 50%;
+    height: 50%;
+}
+
+.loader .loading {
+    position: absolute;
+    background: #cf303d;
+}
+
+.loader .one {
+    width: 100%;
+    bottom: 0;
+    height: 0;
+    animation: loading-one 1s infinite;
+}
+
+.loader .two {
+    width: 0;
+    height: 100%;
+    left: 0;
+    animation: loading-two 1s infinite;
+    animation-delay: 0.25s;
+}
+
+.loader .three {
+    width: 0;
+    height: 100%;
+    right: 0;
+    animation: loading-two 1s infinite;
+    animation-delay: 0.75s;
+}
+
+.loader .four {
+    width: 100%;
+    top: 0;
+    height: 0;
+    animation: loading-one 1s infinite;
+    animation-delay: 0.5s;
+}
+
+@keyframes loading-one {
+    0% {
+        height: 0;
+        opacity: 1;
+    }
+    12.5% {
+        height: 100%;
+        opacity: 1;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        height: 100%;
+        opacity: 0;
+    }
+}
+
+@keyframes loading-two {
+    0% {
+        width: 0;
+        opacity: 1;
+    }
+    12.5% {
+        width: 100%;
+        opacity: 1;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        width: 100%;
+        opacity: 0;
+    }
+}
+
+@keyframes rotate-loader {
+    0% {
+        transform: rotate(-45deg);
+    }
+    20% {
+        transform: rotate(-45deg);
+    }
+    25% {
+        transform: rotate(-135deg);
+    }
+    45% {
+        transform: rotate(-135deg);
+    }
+    50% {
+        transform: rotate(-225deg);
+    }
+    70% {
+        transform: rotate(-225deg);
+    }
+    75% {
+        transform: rotate(-315deg);
+    }
+    95% {
+        transform: rotate(-315deg);
+    }
+    100% {
+        transform: rotate(-405deg);
+    }
+}
+
+@media (min-width: 1000px) {
+    .ml-e {
+        margin-left: 10px;
+        padding-right: 3rem !important;
+        padding-left: 3rem !important;
+    }
 }
